--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
   <A HREF="C:\Users\User'\Downloads\3-force_table.pdf">
-    Pores Tebol Operesyon Manwal
+   Force Table Operation Manual
   </A>
 
   <P>
@@ -10,7 +10,7 @@
     <P>
 
       <VIDEO WIDTH="400" controls>
-        <SOURCE SRC="
+        <SOURCE SRC="C:\Users\User\Downloads\videoplayback.mp4">
     </VIDEO>
           
 </HTML>
