--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <HTML>
-  <A HREF="C:\Users\User'\Downloads\3-force_table.pdf">
+  <A HREF="C:\Users\User\Downloads\forcetable_rev-mar21.pdf">
    Force Table Operation Manual
   </A>
 
   <P>
 
-    <IMG SRC="C:\Users\User'\Downloads\force t.jpg">
+    <IMG SRC="C:\Users\User\Desktop\Universal-Force-Table.jpg">
 
     <P>
 
